# FPlayer-desketop

./: .gitignore  CMakeLists.txt  README.md  main.cpp
3rd/ffmpeg_v8.0.1/include/ffmpeg/libavutil/: common.h
api/: CMakeLists.txt
api/include/api/media/: capture.h
api/include/fplayer/api/: export.h
api/include/fplayer/api/media/: camera.h  capture.h  icamera.h  ifglwidget.h  ifvideoview.h  iplayer.h  player.h  previewtarget.h
api/src/: camera.cpp  icamera.cpp  ifglwidget.cpp  ifvideoview.cpp
api/src/media/: capture.cpp  player.cpp
app/: CMakeLists.txt  main.cpp
backend/: CMakeLists.txt  README.md
backend/media_ffmpeg/: CMakeLists.txt
backend/media_ffmpeg/include/fplayer/backend/media_ffmpeg/: cameraffmpeg.h  camerainfofetcher.h  export.h  fglwidget.h
backend/media_ffmpeg/src/: cameraffmpeg.cpp  camerainfofetcher.cpp  fglwidget.cpp
backend/media_qt6/: CMakeLists.txt
backend/media_qt6/include/fplayer/backend/media_qt6/: cameraqt6.h  captureqt6.h  export.h  playerqt6.h
backend/media_qt6/include/fplayer/media_qt6/: captureqt6.h
backend/media_qt6/src/: cameraqt6.cpp  captureqt6.cpp  playerqt6.cpp
backend/net_qt6/include/fplayer/backend/net_qt6/: export.h  streamqt6.h
cmake/: 3rd.cmake  utils.cmake
common/: CMakeLists.txt
common/include/common/qtloggeradapter/: qtloggeradapter.h
common/include/fplayer/common/: export.h
common/include/fplayer/common/qtloggeradapter/: qtloggeradapter.h
common/src/qtloggeradapter/: qtloggeradapter.cpp
core/: CMakeLists.txt  README.md
core/include/core/: export.h  filtercore.h
core/src/: filtercore.cpp
runtime/: CMakeLists.txt
runtime/include/fplayer/runtime/: export.h  mediafactory.h  runtime.h
runtime/src/: mediafactory.cpp  runtime.cpp
sample/: CMakeLists.txt  main.cpp
service/: CMakeLists.txt  README.md
service/include/fplayer/service/: export.h  service.h
service/src/: service.cpp
widget/: CMakeLists.txt  README.md
widget/include/fplayer/widget/: capturewindow.h  export.h  fvideoview.h
widget/include/widget/: capturewindow.h
widget/src/: capturewindow.cpp  fvideoview.cpp
widget/uis/: capturewindow.ui
